src/gui/kernel/qguiapplication.cpp
@@ -3092,6 +3092,8 @@ void QGuiApplicationPrivate::processScreenLogicalDotsPerInchChange(QWindowSystem
     if (QCoreApplication::startingUp())
         return;
 
+    QHighDpiScaling::updateHighDpiScaling();
+
     if (!e->screen)
         return;
 
